# docs/swagger.json
@@ -4,6 +4,44 @@
         "contact": {}
     },
     "paths": {
+        "/auth/signin": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Providerによるサインインを実施する。新規ユーザの場合、ユーザ登録処理を実施する。",
+                "parameters": [
+                    {
+                        "description": "UserAuth",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/entities.UserAuth"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.User"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/categories": {
             "get": {
                 "produces": [
@@ -159,7 +197,7 @@
                 }
             }
         },
-        "/users": {
+        "/user-auths": {
             "get": {
                 "produces": [
                     "application/json"
@@ -167,14 +205,34 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Userを全件取得",
+                "summary": "検索条件に合うUserを取得",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userId",
+                        "name": "userId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "authProvider",
+                        "name": "authProvider",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "uid",
+                        "name": "uid",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.User"
+                                "$ref": "#/definitions/entities.UserAuth"
                             }
                         }
                     },
@@ -237,6 +295,20 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "entities.UserAuth": {
+            "type": "object",
+            "properties": {
+                "authProvider": {
+                    "type": "string"
+                },
+                "uid": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
                 }
             }
         }
