# pkg/entities/user_auth.go
@@ -1,0 +1,7 @@
+package entities
+
+type UserAuth struct {
+	UserId       int    `json:"userId"`
+	AuthProvider string `json:"authProvider"`
+	Uid          string `json:"uid"`
+}
